--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ body {
 
 @font-face {
   font-family: 'KulimPark';
-  src: url('KulimPark-Regular.otf');
+  src: url(https://miguelyllop.github.io/portfolio2022/SGWEAR.html);
   src: url('KulimPark-Regular.ttf');
     src: url(../fonts/KulimPark/fonts/otf/KulimPark-Regular.otf);
     src: local(../fonts/KulimPark/fonts/otf/KulimPark-Regular.otf);
