--- a/css/main.css
+++ b/css/main.css
@@ -17,8 +17,8 @@ body {
 
 @font-face {
   font-family: 'KulimPark';
-  src: url(https://miguelyllop.github.io/portfolio2022/SGWEAR.html);
-  src: url('KulimPark-Regular.ttf');
+  src: url(https://github.com/noponies/Kulim-Park/raw/master/fonts/otf/KulimPark-Regular.otf);
+  src: url(https://github.com/noponies/Kulim-Park/raw/master/fonts/otf/KulimPark-Regular.ttf);
     src: url(../fonts/KulimPark/fonts/otf/KulimPark-Regular.otf);
     src: local(../fonts/KulimPark/fonts/otf/KulimPark-Regular.otf);
     src: url(../fonts/KulimPark/fonts/ttf/KulimPark-Regular.ttf);
