--- a/css/main.css
+++ b/css/main.css
@@ -17,8 +17,10 @@ body {
 
 @font-face {
   font-family: 'KulimPark';
+  font-style: normal;
+  font-weight: 400;
   src: url(https://github.com/noponies/Kulim-Park/raw/master/fonts/otf/KulimPark-Regular.otf) format('otf');
-  src: url(https://github.com/noponies/Kulim-Park/raw/master/fonts/otf/KulimPark-Regular.ttf)format('ttf');
+  src: url(https://github.com/noponies/Kulim-Park/raw/master/fonts/otf/KulimPark-Regular.ttf) format('ttf');
     src: url(../fonts/KulimPark/fonts/otf/KulimPark-Regular.otf);
     src: local(../fonts/KulimPark/fonts/otf/KulimPark-Regular.otf);
     src: url(../fonts/KulimPark/fonts/ttf/KulimPark-Regular.ttf);
