--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,14 @@
 @font-face {
-    font-family: 'KulimPark';
-    src: url('../fonts/kulimparkregular-webfont.woff2') format('woff2'),
-         url('../fonts/kulimparkregular-webfont.woff') format('woff');
+    font-family: 'Kulim Park';
+    src: url('../fonts/km/KulimPark-Regular.eot');
+    src: url('../fonts/km/KulimPark-Regular.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/km/KulimPark-Regular.woff2') format('woff2'),
+        url('../fonts/km/KulimPark-Regular.woff') format('woff'),
+        url('../fonts/km/KulimPark-Regular.ttf') format('truetype'),
+        url('../fonts/km/KulimPark-Regular.svg#KulimPark-Regular') format('svg');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 
 *, *::after, *::before {
