--- a/css/main.css
+++ b/css/main.css
@@ -967,6 +967,15 @@ top: 2rem;
 right: 2rem;
 }
 
+@media (min-width:728px){
+  .logo-index {
+    width: 40px;
+  height: 40px;
+  position: absolute;
+  top: 2rem;
+  right: 2rem;
+  }
+
 .logo-index2 {
   width: auto;
 height: 40px;
@@ -974,6 +983,15 @@ position: absolute;
 top: 2rem;
 right: 2rem;
 }
+
+@media (min-width:728px){
+  .logo-index2 {
+    width: 40px;
+  height: 40px;
+  position: absolute;
+  top: 2rem;
+  right: 2rem;
+  }
 
 /*END OF STYLE GUIDE STYLING*/
 
