--- a/css/main.css
+++ b/css/main.css
@@ -975,6 +975,7 @@ right: 2rem;
   top: 2rem;
   right: 2rem;
   }
+  }
 
 .logo-index2 {
   width: auto;
@@ -991,6 +992,7 @@ right: 2rem;
   position: absolute;
   top: 2rem;
   right: 2rem;
+  }
   }
 
 /*END OF STYLE GUIDE STYLING*/
