--- a/css/main.css
+++ b/css/main.css
@@ -967,7 +967,7 @@ top: 2rem;
 right: 2rem;
 }
 
-@media (min-width:728px){
+@media (max-width:728px){
   .logo-index {
     width: 40px;
   height: 40px;
@@ -985,9 +985,9 @@ top: 2rem;
 right: 2rem;
 }
 
-@media (min-width:728px){
+@media (max-width:728px){
   .logo-index2 {
-    width: 40px;
+    width: auto;
   height: 40px;
   position: absolute;
   top: 2rem;
